src/main/resources/k8s/deploymentDataBase.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      hostname: mysql
      containers:
      - name: mysql
        image: mysql:latest
        imagePullPolicy: Always
        ports:
        - name: mysql
          containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: k8s-mysql-storage
          mountPath: /var/lib/mysql  
      volumes:
      - name: k8s-mysql-storage
        emptyDir: {}      
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: mysql
---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: mysql
#   labels:
#     name: mysql
# spec:
#   containers:
#   - name: mysql
#     image: mysql:latest
#     env:
#     - name: MYSQL_ROOT_PASSWORD
#       valueFrom:
#         secretKeyRef:
#           name: mysql-pass
#           key: password
#     ports:
#     - name: mysql
#       containerPort: 3306
#       protocol: TCP
#     volumeMounts:
#     - name: k8s-mysql-storage
#       mountPath: /var/lib/mysql
#   volumes:
#   - name: k8s-mysql-storage
#     emptyDir: {}  
---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: lbl-k8s-mysql
#   namespace: default
# subsets:
# - addresses:
#   - ip: 10.111.128.20
#   ports:
#   - port: 3306
