src/main/resources/k8s/deploymentFrontend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-frontend
  labels:
    app: nginx-frontend
spec:
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      hostname: nginx-frontend
      containers:
      - name: nginx-frontend
        image: ecommerce-frontend:0.0.8
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-frontend
#  labels:
#    app: nginx-frontend
#spec:
#  type: LoadBalancer
#  ports:
#  - port: 80
#    protocol: TCP
#  selector:
#    app: nginx-frontend
#---
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
  labels:
    app: nginx-frontend
spec:
  selector:
    app: nginx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
