src/main/resources/k8s/nginx-host.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx3
  labels:
    app: nginx3
spec:
  selector:
    matchLabels:
      app: nginx3
  template:
    metadata:
      labels:
        app: nginx3
    spec:
      hostname: nginx3
      containers:
        - name: nginx3
          image: stenote/nginx-hostname
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx3
  labels:
    app: nginx3
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx3
